fix(api): solve CORS errors when running locally
closes #6
