# packages/api/cfn/swagger.yml
@@ -3,42 +3,12 @@ openapi: 3.0.1
 info:
   version: 1.0.0
   title: Clean Arch Todos API
-  
+
 tags:
   - name: todos
 
 paths:
-
   /lists/{listId}/todos:
-
-    options:
-      responses:
-        200:
-          description: "200 response"
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content: {}
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST,GET,DELETE,PUT'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        passthroughBehavior: "when_no_match"
-        requestTemplates:
-          application/json: '{"statusCode": 200}'
-        type: "mock"
-
     get:
       tags:
         - todos
@@ -97,35 +67,6 @@ paths:
         type: aws_proxy
 
   /lists/{listId}/todos/{todoId}:
-
-    options:
-      responses:
-        200:
-          description: "200 response"
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content: {}
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST,GET,DELETE,PUT'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        passthroughBehavior: "when_no_match"
-        requestTemplates:
-          application/json: '{"statusCode": 200}'
-        type: "mock"
-
     delete:
       tags:
         - todos
@@ -153,35 +94,6 @@ paths:
         type: aws_proxy
 
   /lists:
-
-    options:
-      responses:
-        200:
-          description: "200 response"
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content: {}
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST,GET,DELETE,PUT'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        passthroughBehavior: "when_no_match"
-        requestTemplates:
-          application/json: '{"statusCode": 200}'
-        type: "mock"
-
     post:
       tags:
         - todos
@@ -203,11 +115,9 @@ paths:
         passthroughBehavior: when_no_match
         httpMethod: POST
         type: aws_proxy
-          
+
 components:
-
   schemas:
-
     Todo:
       type: object
       properties:
@@ -269,7 +179,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Link"
-            
+
     Link:
       type: object
       properties:
