# packages/api/src/cors-headers.ts
@@ -1,0 +1,6 @@
+export default {
+	"Access-Control-Allow-Headers": "Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token",
+	"Access-Control-Allow-Methods": "OPTIONS,POST,GET,DELETE,PUT",
+	"Access-Control-Allow-Origin": "*",
+	"Content-Type": "application/json"
+}
