# packages/api/src/delete-todo/controller.ts
@@ -4,22 +4,18 @@ import {
 	Handler,
 } from "aws-lambda";
 
+import headers from "../cors-headers";
+
 import { DeleteTodo, DeleteTodoParameters, IMediator } from "@todos/core";
 
 export default (mediator: IMediator): Handler =>
 	async (event: APIGatewayProxyEvent): Promise<APIGatewayProxyResult> => {
 		console.debug("Event:", event);
 
-		const response: Partial<APIGatewayProxyResult> = {
+		const response: APIGatewayProxyResult = {
 			statusCode: 204,
 			body: "",
-			headers: {
-				"Access-Control-Allow-Headers":
-					"Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token",
-				"Access-Control-Allow-Methods": "OPTIONS,POST,GET,DELETE,PUT",
-				"Access-Control-Allow-Origin": "*",
-				"Content-Type": "application/json",
-			},
+			headers,
 		};
 
 		try {
@@ -45,5 +41,5 @@ export default (mediator: IMediator): Handler =>
 
 		console.debug("Response:", response);
 
-		return response as APIGatewayProxyResult;
+		return response;
 	};
